# fluid

./: .gitignore  README.md  adaptive-fluid.ipynb  pre_flwr_run.py  pyproject.toml
src/: client_app.py  data_loader.py  server_app.py
src/ml_models/: cnn.py  utils.py
